Added flyway and jdbc dependencies.

--- a/demo-one/src/main/resources/application.yaml
+++ b/demo-one/src/main/resources/application.yaml
@@ -10,9 +10,11 @@ spring:
     password: root
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: validate
     properties:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
         format_sql: true
-    show-sql: false
+    show-sql: true
+  flyway:
+    baseline-on-migrate: true
