--- a/demo-one/pom.xml
+++ b/demo-one/pom.xml
@@ -11,11 +11,14 @@
     <groupId>com.amigosecode</groupId>
     <artifactId>demo-one</artifactId>
     <version>0.0.1-SNAPSHOT</version>
+
     <name>demo-one</name>
     <description>demo-one</description>
     <properties>
         <java.version>21</java.version>
+        <docker.username>170042060</docker.username>
     </properties>
+
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -152,6 +155,36 @@
                                 <portName>tomcat.http.port</portName>
                             </portNames>
                         </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>com.google.cloud.tools</groupId>
+                <artifactId>jib-maven-plugin</artifactId>
+                <version>3.4.0</version>
+                <configuration>
+                    <from>
+                        <image>eclipse-temurin:21</image>
+                        <platforms>
+                            <platform>
+                                <architecture>amd64</architecture>
+                                <os>linux</os>
+                            </platform>
+                        </platforms>
+                    </from>
+                    <to>
+                        <image>docker.io/${docker.username}/${project.artifactId}:${project.version}</image>
+                        <tags>
+                            <tag>latest</tag>
+                        </tags>
+                    </to>
+                </configuration>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>build</goal>
+                        </goals>
                     </execution>
                 </executions>
             </plugin>
