Updated the docker-compose file to run the container of demo app.

--- a/demo-one/docker-compose.yaml
+++ b/demo-one/docker-compose.yaml
@@ -13,6 +13,18 @@ services:
     networks:
       - db
     restart: unless-stopped
+  demo-one:
+    container_name: demo-one
+    image: 170042060/demo-one
+    environment:
+      SPRING_DATASOURCE_URL: jdbc:postgresql://db:5432/amigosecode
+    ports:
+      - "7777:9090"
+    networks:
+      - db
+    depends_on:
+      - db
+    restart: unless-stopped
 
 networks:
   db:
