Removed 9090 port to run the application on default port 8080.

--- a/demo-one/src/main/resources/application.yaml
+++ b/demo-one/src/main/resources/application.yaml
@@ -1,5 +1,4 @@
 server:
-  port: 9090
   error:
     include-message: always
 
@@ -18,3 +17,13 @@ spring:
     show-sql: true
   flyway:
     baseline-on-migrate: true
+
+logging:
+  file:
+    name: demo-app.log
+  level:
+    org:
+      springframework:
+        web: INFO
+    com:
+      example: DEBUG
