--- a/demo-one/pom.xml
+++ b/demo-one/pom.xml
@@ -167,7 +167,7 @@
                         <image>eclipse-temurin:21</image>
                         <platforms>
                             <platform>
-                                <architecture>amd64</architecture>
+                                <architecture>arm64</architecture>
                                 <os>linux</os>
                             </platform>
                         </platforms>
