--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,7 @@
 services:
   db:
     container_name: postgres
-    image: postgres
+    image: postgres:16.1
     environment:
       POSTGRES_USER: root
       POSTGRES_PASSWORD: root
