Fixed the database name ambiguity.

--- a/back-end/src/main/resources/application.yaml
+++ b/back-end/src/main/resources/application.yaml
@@ -4,7 +4,7 @@ server:
 
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5432/amigosecode
+    url: jdbc:postgresql://localhost:5432/block_craft
     username: root
     password: root
   jpa:
