--- a/.github/workflows/backend-ci.yaml
+++ b/.github/workflows/backend-ci.yaml
@@ -16,7 +16,7 @@ jobs:
         env:
           POSTGRES_USER: root
           POSTGRES_PASSWORD: root
-          POSTGRES_DB: customer
+          POSTGRES_DB: block_craft
         ports:
           - 5432:5432
         options: >-
