2nd attempt to prevent the workflow from building image.

--- a/.github/workflows/backend-ci.yaml
+++ b/.github/workflows/backend-ci.yaml
@@ -41,3 +41,6 @@ jobs:
           cache: 'maven'
       - name: Build and run Unit/Integration Tests with Maven
         run: mvn clean verify
+      - name: Build Docker Image (optional)
+        if: ${{ runner.os == 'Linux' }}
+        run: docker build -no-cache
