--- a/.github/workflows/backend-ci.yaml
+++ b/.github/workflows/backend-ci.yaml
@@ -40,7 +40,4 @@ jobs:
           java-version: '21'
           cache: 'maven'
       - name: Build and run Unit/Integration Tests with Maven
-        run: mvn clean verify
-      - name: Build Docker Image (optional)
-        if: ${{ runner.os == 'Linux' }}
-        run: docker build -no-cache
+        run: mvn clean verify -Ddockerfile.skip
