Trying to skip docker image building in CI.

--- a/back-end/pom.xml
+++ b/back-end/pom.xml
@@ -17,6 +17,7 @@
     <properties>
         <java.version>21</java.version>
         <docker.username>170042060</docker.username>
+        <skipDockerBuild>false</skipDockerBuild>
     </properties>
 
     <dependencies>
@@ -178,6 +179,7 @@
                             <tag>latest</tag>
                         </tags>
                     </to>
+                    <skip>${skipDockerBuild}</skip>
                 </configuration>
                 <executions>
                     <execution>
