--- a/.github/workflows/backend-ci.yaml
+++ b/.github/workflows/backend-ci.yaml
@@ -40,4 +40,4 @@ jobs:
           java-version: '21'
           cache: 'maven'
       - name: Build and run Unit/Integration Tests with Maven
-        run: mvn clean verify -Ddockerfile.skip
+        run: ./mvnw clean verify -Ptest -DskipDockerBuild=true
