--- a/back-end/pom.xml
+++ b/back-end/pom.xml
@@ -8,12 +8,12 @@
         <version>3.1.5</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>com.amigosecode</groupId>
-    <artifactId>demo-one</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <groupId>com.blockcraft</groupId>
+    <artifactId>blockcraft</artifactId>
+    <version>1.0.0-SNAPSHOT</version>
 
-    <name>demo-one</name>
-    <description>demo-one</description>
+    <name>BlockCraft</name>
+    <description>A full-stack application integrating Spring Boot and React for creative development and collaboration.</description>
     <properties>
         <java.version>21</java.version>
         <docker.username>170042060</docker.username>
