--- a/back-end/pom.xml
+++ b/back-end/pom.xml
@@ -16,8 +16,10 @@
     <description>A full-stack application integrating Spring Boot and React for creative development and collaboration.</description>
     <properties>
         <java.version>21</java.version>
-        <docker.username>170042060</docker.username>
         <skipDockerBuild>false</skipDockerBuild>
+        <docker.username>170042060</docker.username>
+        <docker.image.name>blockcraft-api</docker.image.name>
+        <docker.image.tag/>
     </properties>
 
     <dependencies>
@@ -174,7 +176,7 @@
                         </platforms>
                     </from>
                     <to>
-                        <image>docker.io/${docker.username}/${project.artifactId}:${project.version}</image>
+                        <image>docker.io/${docker.username}/${docker.image.name}:${docker.image.tag}</image>
                         <tags>
                             <tag>latest</tag>
                         </tags>
